--- a/ericDuong.html
+++ b/ericDuong.html
@@ -1,1 +1,29 @@
-<!DOCtype HTML>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Eric Duong</title>
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="ericDuongstyle.css">
+  
+</head>
+<body>
+  <div class="container">
+    <div class="jumbotron">
+      <div class="row text-center">
+      <h1>ERIC DUONG</h1>
+      <h3>photos</h3>
+      </div>
+    </div>
+  </div>
+
+ 
+
+ <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+</body>
+</html>
