--- a/ericDuong.html
+++ b/ericDuong.html
@@ -10,6 +10,14 @@
   
 </head>
 <body>
+  <div class="menu">
+    <ul>
+      <li><a href="#">about</a></li>
+      <li><a href="#">blog</a></li>
+      <li><a href="#">contact</a></li>
+    </ul>
+  </div>
+
   <div class="container">
     <div class="jumbotron">
       <div class="row text-center">
@@ -18,6 +26,7 @@
       </div>
     </div>
   </div>
+
 
  
 
