added menu text

--- a/ericDuong.html
+++ b/ericDuong.html
@@ -11,21 +11,29 @@
 </head>
 <body>
   <div class="menu">
+    <div class="col-sm-2">
     <ul>
       <li><a href="#">about</a></li>
       <li><a href="#">blog</a></li>
       <li><a href="#">contact</a></li>
     </ul>
+    </div>
   </div>
+
 
   <div class="container">
     <div class="jumbotron">
-      <div class="row text-center">
+      
       <h1>ERIC DUONG</h1>
       <h3>photos</h3>
-      </div>
+      
     </div>
   </div>
+
+<div class="menu-open">
+<i class="fa fa-bars"></i>
+Menu
+</div>
 
 
  
