--- a/ericDuong.html
+++ b/ericDuong.html
@@ -11,22 +11,27 @@
 </head>
 <body>
   <div class="menu">
-    <div class="col-sm-2">
-    <ul>
-      <li><a href="#">about</a></li>
-      <li><a href="#">blog</a></li>
-      <li><a href="#">contact</a></li>
-    </ul>
+    <div class="row">
+      <div class="col-sm-2">
+        <ul>
+          <li><a href="#">about</a></li>
+          <li><a href="#">blog</a></li>
+          <li><a href="#">contact</a></li>
+        </ul>
+      </div>
     </div>
   </div>
 
 
+
   <div class="container">
-    <div class="jumbotron">
-      
-      <h1>ERIC DUONG</h1>
-      <h3>photos</h3>
-      
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="jumbotron img-responsive">
+          <h1>ERIC DUONG</h1>
+          <h3>photos</h3>
+        </div>
+      </div>
     </div>
   </div>
 
