--- a/ericDuong.html
+++ b/ericDuong.html
@@ -10,6 +10,19 @@
   
 </head>
 <body>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="jumbotron img-responsive">
+          <h1>ERIC DUONG</h1>
+          <h3>photos</h3>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <header>HELLO</header>
   <div class="menu">
     <div class="row">
       <div class="col-sm-2">
@@ -24,16 +37,6 @@
 
 
 
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12">
-        <div class="jumbotron img-responsive">
-          <h1>ERIC DUONG</h1>
-          <h3>photos</h3>
-        </div>
-      </div>
-    </div>
-  </div>
 
 <div class="menu-open">
 <i class="fa fa-bars"></i>
