--- a/ericDuong.html
+++ b/ericDuong.html
@@ -10,41 +10,22 @@
   
 </head>
 <body>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12">
-        <div class="jumbotron img-responsive">
+   <div class="container">
+      <div class="row">
+        <div class="jumbotron">
           <h1>ERIC DUONG</h1>
           <h3>photos</h3>
         </div>
       </div>
-    </div>
-  </div>
-
-  <header>HELLO</header>
-  <div class="menu">
-    <div class="row">
-      <div class="col-sm-2">
-        <ul>
+    
+          <div class="nav">
+          <ul>
           <li><a href="#">about</a></li>
           <li><a href="#">blog</a></li>
           <li><a href="#">contact</a></li>
         </ul>
       </div>
-    </div>
   </div>
-
-
-
-
-<div class="menu-open">
-<i class="fa fa-bars"></i>
-Menu
-</div>
-
-
- 
 
  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
