added submission form

--- a/ericDuong.html
+++ b/ericDuong.html
@@ -12,19 +12,23 @@
 <body>
    <div class="container">
       <div class="row">
-        <div class="jumbotron">
-          <h1>ERIC DUONG</h1>
-          <h3>photos</h3>
-        </div>
-      </div>
-    
-          <div class="nav">
+        <div class="nav col-md-2">
           <ul>
           <li><a href="#">about</a></li>
           <li><a href="#">blog</a></li>
           <li><a href="#">contact</a></li>
+          <li><a href="#">photos</a></li>
         </ul>
       </div>
+        <div class="jumbotron col-md-10">
+          <h1>ERIC DUONG</h1>
+        </div>
+      </div>
+<form> 
+<textarea class ="form-control" rows = "2" placeholder="Input weight"></textarea>
+</form>
+    <button>Submit</button>
+
   </div>
 
  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
