--- a/ericDuong.html
+++ b/ericDuong.html
@@ -27,8 +27,10 @@
 <form> 
 <textarea class ="form-control" rows = "2" placeholder="Input weight"></textarea>
 </form>
-    <button>Submit</button>
-
+    <a href="#" class="button">Submit</a>
+      <ul class = "weights">
+        
+      </ul>
   </div>
 
  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
