--- a/ericDuong.html
+++ b/ericDuong.html
@@ -18,6 +18,7 @@
           <li><a href="#">blog</a></li>
           <li><a href="#">contact</a></li>
           <li><a href="#">photos</a></li>
+          <li><a href="#">test</a></li>
         </ul>
       </div>
         <div class="jumbotron col-md-10">
